--- a/blog/templates/accounts/friendList.html
+++ b/blog/templates/accounts/friendList.html
@@ -1,5 +1,253 @@
-친구 목록이 작성됩니다 
+{% load static %}
 
-아래에는 친구 추천이 뜹니다. 
+<!doctype html>
+<html lang="en">
 
-로직은 아직 미정 
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>MyTube - pageList </title>
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <!-- animate CSS -->
+    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
+    <!-- owl carousel CSS -->
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <!-- themify CSS -->
+    <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
+    <!-- flaticon CSS -->
+    <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
+    <!-- font awesome CSS -->
+    <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+    <!-- swiper CSS -->
+    <link rel="stylesheet" href="{% static 'css/slick.css' %}">
+    <link rel="stylesheet" href="{% static 'css/gijgo.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
+    <!-- style CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+
+<body>
+    <!--::header part start::-->
+    <header class="main_menu">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-12">
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <a class="navbar-brand" href="/"> <img src="{% static 'img/logo.png' %}" alt="logo" style="width: 60%;"> </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse main-menu-item text-center" id="navbarSupportedContent">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'blog:post_list' %}">Blog</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'blog:post_list_friend' %}">Friends</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        MyPage
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" href="{% url 'accounts:profile' %}">프로필</a>
+                                        <a class="dropdown-item" href="{% url 'accounts:friendList' %}">친구 관리</a>
+                                        <a class="dropdown-item" href="{% url 'accounts:logout' %}">로그아웃</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div> 
+        </div>
+    </header>
+    <!-- Header part end-->
+
+<!--================Blog Area =================-->
+<!-- breadcrumb start-->
+<section class="breadcrumb breadcrumb_bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="breadcrumb_iner text-center">
+                    <div class="breadcrumb_iner_item">
+                        <h2>Experienced Chefs</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- breadcrumb start-->
+
+<!--::chefs_part start::-->
+<section class="chefs_part blog_item_section section_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-5">
+                <div class="section_tittle">
+                    <p>Team Member</p>
+                    <h2>Our Experience Chefs</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-lg-4">
+                <div class="single_blog_item">
+                    <div class="single_blog_img">
+                        <img src="img/team/chefs_1.png" alt="">
+                    </div>
+                    <div class="single_blog_text text-center">
+                        <h3>Adam Billiard</h3>
+                        <p>Chef Master</p>
+                        <div class="social_icon">
+                            <a href="#"> <i class="ti-facebook"></i> </a>
+                            <a href="#"> <i class="ti-twitter-alt"></i> </a>
+                            <a href="#"> <i class="ti-instagram"></i> </a>
+                            <a href="#"> <i class="ti-skype"></i> </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+                <div class="single_blog_item">
+                    <div class="single_blog_img">
+                        <img src="img/team/chefs_2.png" alt="">
+                    </div>
+                    <div class="single_blog_text text-center">
+                        <h3>Fred Macyard</h3>
+                        <p>Chef Master</p>
+                        <div class="social_icon">
+                            <a href="#"> <i class="ti-facebook"></i> </a>
+                            <a href="#"> <i class="ti-twitter-alt"></i> </a>
+                            <a href="#"> <i class="ti-instagram"></i> </a>
+                            <a href="#"> <i class="ti-skype"></i> </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+                <div class="single_blog_item">
+                    <div class="single_blog_img">
+                        <img src="img/team/chefs_3.png" alt="">
+                    </div>
+                    <div class="single_blog_text text-center">
+                        <h3>Justin Stuard</h3>
+                        <p>Chef Master</p>
+                        <div class="social_icon">
+                            <a href="#"> <i class="ti-facebook"></i> </a>
+                            <a href="#"> <i class="ti-twitter-alt"></i> </a>
+                            <a href="#"> <i class="ti-instagram"></i> </a>
+                            <a href="#"> <i class="ti-skype"></i> </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 d-none d-sm-block d-lg-none">
+                <div class="single_blog_item">
+                    <div class="single_blog_img">
+                        <img src="img/team/chefs_1.png" alt="">
+                    </div>
+                    <div class="single_blog_text text-center">
+                        <h3>Justin Stuard</h3>
+                        <p>Chef Master</p>
+                        <div class="social_icon">
+                            <a href="#"> <i class="ti-facebook"></i> </a>
+                            <a href="#"> <i class="ti-twitter-alt"></i> </a>
+                            <a href="#"> <i class="ti-instagram"></i> </a>
+                            <a href="#"> <i class="ti-skype"></i> </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--::chefs_part end::-->
+<!--================Blog Area end =================-->
+
+<footer class="footer-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-3 col-sm-6 col-md-3 col-lg-3">
+                <div class="single-footer-widget footer_1">
+                    <h4> About </h4>
+                    <p> 유튜브 중독자가 되어버린 제작자가 만들어본 포트폴리오 페이지입니다. </p>
+                </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-md-2 col-lg-3">
+                <div class="single-footer-widget footer_2">
+                    <h4> 사용 기술 </h4>
+                    <div class="contact_info">
+                        <ul>
+                            <li><a href="#"> Python / Django </a></li>
+                            <li><a href="#"> Postgre SQL </a></li>
+                            <li><a href="#"> Bootstrap5 템플릿 활용 </a></li>
+                            <li><a href="#"> VSCODE / DBeaver 활용 </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-sm-6 col-md-3 col-lg-3">
+                <div class="single-footer-widget footer_2">
+                    <h4>Contact me</h4>
+                    <div class="contact_info">
+                        <p><span> Address :</span> 경기도 성남시 </p>
+                        <p><span> Email : </span> kuuko7556@gmail.com </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copyright_part_text">
+            <div class="row">
+                <div class="col-lg-8">
+                    <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                </div>
+                <div class="col-lg-4">
+                    <div class="copyright_social_icon text-right">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="ti-dribbble"></i></a>
+                        <a href="#"><i class="fab fa-behance"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- footer part end-->
+
+<!-- jquery plugins here-->
+<!-- jquery -->
+<script src="<% static 'js/jquery-1.12.1.min.js' %}"></script>
+<!-- popper js -->
+<script src="<% static 'js/popper.min.js' %}"></script>
+<!-- bootstrap js -->
+<script src="<% static 'js/bootstrap.min.js' %}"></script>
+<!-- easing js -->
+<script src="<% static 'js/jquery.magnific-popup.js' %}"></script>
+<!-- swiper js -->
+<script src="<% static 'js/swiper.min.js' %}"></script>
+<!-- swiper js -->
+<script src="<% static 'js/masonry.pkgd.js' %}"></script>
+<!-- particles js -->
+<script src="<% static 'js/owl.carousel.min.js' %}"></script>
+<!-- swiper js -->
+<script src="<% static 'js/slick.min.js' %}"></script>
+<script src="<% static 'js/gijgo.min.js' %}"></script>
+<script src="<% static 'js/jquery.nice-select.min.js' %}"></script>
+<!-- custom js -->
+<script src="<% static 'js/custom.js' %}"></script>
+</body>
+
+</html>
